--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   max-width: 900px;
   padding: 0 2rem;
   margin: 0 auto;
-  background: yellow;
 }
 
 .App {
@@ -25,10 +24,13 @@ header {
   top: 0;
 }
 
+.logo {
+  color: #fff;
+  font-weight: bold;
+}
+
 nav {
-/*  width: 400px;*/
   margin: 0 auto;
-  background: green;
 }
 
 header a:hover {
