--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: auto;
   margin: 0 auto;
-  text-align: center;
+/*  text-align: center;*/
 }
 
 .container {
@@ -18,15 +18,40 @@
 
 header {
   width: 100%;
-  height: 60px;
-  background: #212530;
+  height: 90px;
   position: fixed;
   top: 0;
+}
+
+.header-elements {
+  width: 100%;
+  height: 60px;
+  background: #212530;
 }
 
 .logo {
   color: #fff;
   font-weight: bold;
+}
+
+.form-search__btn {
+  width: 100px;
+  height: 100px;
+}
+
+.form-search__btn {
+  width: 55px;
+  height: 20px;
+  padding: 0;
+  border-radius: 0;
+  border: transparent;
+  cursor: pointer;
+}
+
+.form-search__btn input {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
 }
 
 nav {
