--- a/src/App.css
+++ b/src/App.css
@@ -183,7 +183,7 @@ main {
 }
 
 .product-card__info_price h2 {
-  width: 200px;
+  width: 190px;
   height: 20px;
   margin: 0;
   padding: 0;
@@ -191,7 +191,7 @@ main {
 }
 
 .product-card__info_price p {
-  width: 200px;
+  width: 190px;
   height: 14px;
   margin: 10px 0 5px 0;
   padding: 0;
@@ -205,7 +205,7 @@ main {
 }
 
 .product-card__info_title h3 {
-  width: 200px;
+  width: 190px;
   height: 27px;
   margin: 0;
   color: #646CFF;
@@ -213,7 +213,7 @@ main {
 }
 
 .product-card__info_title p {
-  width: 200px;
+  width: 190px;
   height: 14px;
   margin: 0;
   color: #37363c ;
@@ -226,7 +226,9 @@ main {
   margin: 20px 0 0px 0;
   font-size: 14px;
   text-transform: uppercase;
-  border: 1px solid #707070;
+  background: transparent;
+  color: #646cff;
+  border: 1px solid #646cff;
   border-radius: 3px;
   cursor: pointer;
 }
