--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ header {
   height: 90px;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 .header-elements {
@@ -90,6 +91,7 @@ header {
 nav {
   margin: 0 auto;
   padding: 10px 0;
+  background: #fff;
   box-shadow: 0 0 10px rgb(0 0 0 / 20%);
 }
 
@@ -123,6 +125,16 @@ main {
 .active {
   color: #212530;
   cursor: pointer;
+}
+
+.product-list {
+  width: 100%;
+  height: auto;
+  margin: 100px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  justify-items: center;
 }
 
 .product-card {
@@ -234,8 +246,8 @@ main {
 }
 
 .product-card__info_cart:hover {
-  background: #ca4e79;
-  border: 1px solid #ca4e79;
+  background: #646CFF;
+  border: 1px solid #646CFF;
   color: #fff;
   font-weight: bold;
 }
