--- a/src/components/main/home/Catalogcard.module.css
+++ b/src/components/main/home/Catalogcard.module.css
@@ -1,3 +1,4 @@
+
 .product-card {
   width: 230px;
   height: 340px;
@@ -56,7 +57,7 @@
 }
 
 .product-card__info_price h2 {
-  width: 200px;
+  width: 190px;
   height: 20px;
   margin: 0;
   padding: 0;
@@ -64,7 +65,7 @@
 }
 
 .product-card__info_price p {
-  width: 200px;
+  width: 190px;
   height: 14px;
   margin: 10px 0 5px 0;
   padding: 0;
@@ -78,7 +79,7 @@
 }
 
 .product-card__info_title h3 {
-  width: 200px;
+  width: 190px;
   height: 27px;
   margin: 0;
   color: #646CFF;
@@ -86,7 +87,7 @@
 }
 
 .product-card__info_title p {
-  width: 200px;
+  width: 190px;
   height: 14px;
   margin: 0;
   color: #37363c ;
@@ -99,14 +100,16 @@
   margin: 20px 0 0px 0;
   font-size: 14px;
   text-transform: uppercase;
-  border: 1px solid #707070;
+  background: transparent;
+  color: #646cff;
+  border: 1px solid #646cff;
   border-radius: 3px;
   cursor: pointer;
 }
 
 .product-card__info_cart:hover {
-  background: #ca4e79;
-  border: 1px solid #ca4e79;
+  background: #646CFF;
+  border: 1px solid #646CFF;
   color: #fff;
   font-weight: bold;
 }
