--- a/src/components/main/form/UserForm.css
+++ b/src/components/main/form/UserForm.css
@@ -1,17 +1,20 @@
 .user-form {
 	margin: 100px auto;
-  padding: 20px;
+  padding: 40px;
   background: #fff;
   box-shadow: 0 0 10px rgb(0 0 0 / 20%);
 }
 
+.user-form input {
+  margin-bottom: 20px;
+}
+
 .form-text input {
-  width: 250px;
+  width: 270px;
   height: 40px;
   border-radius: 6px;
   border: 1px solid #dee2e7;
 }
-
 
 .user-form__floating {
   position: relative;
@@ -45,52 +48,41 @@
 .user-form ::-webkit-input-placeholder {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  font-size: 16px;
   font-weight: 400;
   color-scheme: light dark;
   color: #213547;
-  font-size: 16px;
 }
 
 .user-form :-moz-placeholder {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  font-size: 16px;
   font-weight: 400;
   color-scheme: light dark;
   color: #213547;
-  font-size: 16px;
 }
 
 .user-form ::-moz-placeholder {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  font-size: 16px;
   font-weight: 400;
   color-scheme: light dark;
   color: #213547;
-  font-size: 16px;
 }
 
 .user-form :-ms-input-placeholder {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  font-size: 16px;
   font-weight: 400;
   color-scheme: light dark;
   color: #213547;
-  font-size: 16px;
-}
-
-.user-form__name {
-  width: 200px;
-  height: 25px;
-
-}
-
-.user-form__mail {
-  width: 200px;
-  height: 25px;
 }
 
 .user-form__date {
-  width: 242px;
+  width: 262px;
   height: 42px;
   padding: 0 10px;
   border-radius: 6px;
@@ -98,10 +90,60 @@
   cursor: pointer;
 }
 
-.user-form__select {
-  width: 200px;
-  height: 25px;
+.user-form__select { 
+  display: block; 
+  margin: 0; 
+  padding: .6em 1.4em .5em .8em; 
+  width: 100%; 
+  max-width: 100%; 
+  box-sizing: border-box; 
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-size: 16px;
+  font-weight: 400;
+  color-scheme: light dark;
+  color: #213547;  
+  border: 1px solid #dee2e7;
+  border-radius: 5px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff; 
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%; 
   cursor: pointer;
+} 
+
+.user-form__select::-ms-expand {
+  display: none; 
+}
+
+.user-form__select:hover { 
+  border-color: #888;
+}
+
+.user-form input:focus,
+.user-form__select:focus { 
+  border-color: #aaa; 
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, .5);
+  box-shadow: 0 0 0 3px -moz-mac-focusring; 
+  color: #222;
+  outline: none; 
+} 
+
+.user-form__select option { 
+  font-weight:normal; 
+}
+
+.user-form__select option:hover { 
+  background: #213547;
+  color: $fff;
+} 
+
+.user-form__theme input {
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .user-form__checkbox {
@@ -110,24 +152,40 @@
   margin-right: 10px;
   border-radius: 3px;
   cursor: pointer;
-  float: left;
 }
 
-.user-form__agree p{
-  width: 250px;
-}
-
-.user-form__radio {
+.user-form__light,
+.user-form__dark {
+  padding: 5px 10px;
+  font-size: 14px;
   cursor: pointer;
 }
 
-.user-form__file {
-  width: 120px;
+.user-form__dark {
+  color: #fff;
+  background: #646464;
+}
+
+.user-form__image {
+  margin-top: 10px;
+/*  display: grid;*/
+}
+.user-form__image label {
+  margin-bottom: 10px;
   margin-right: 20px;
+  cursor: pointer;
+}
+
+.user-form__image input {
+  margin-bottom: 0;
+}
+
+.user-form__file {
+  width: 140px;
 }
 
 .user-form__file::-webkit-file-upload-button {
-  width: 120px;
+  width: 140px;
   height: 50px;
   background: #fff;
   border-radius: 3px;
@@ -135,6 +193,38 @@
   cursor: pointer;
 }
 
+.user-form__radio {
+  cursor: pointer;
+}
+
+.user-form__agree {
+  margin: 20px 0;
+  display: grid;
+  grid-auto-flow: column;
+
+}
+
+.user-form__agree p {
+  margin: 0;
+  width: 250px;
+  background: #f5f5f5;
+  font-size: 14px;
+  line-height: 1.3;
+}
+
 .user-form__btn_save {
-	
+  margin-top: 5px;
+  width: 100%;
+	background: #646CFF;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.user-form__btn_save:hover {
+  background: #4E6E81;
+}
+
+.user-form__btn_save:focus {
+  outline: none;
 }
