--- a/src/components/main/form/UserForm.css
+++ b/src/components/main/form/UserForm.css
@@ -5,6 +5,11 @@
   box-shadow: 0 0 10px rgb(0 0 0 / 20%);
 }
 
+.user-form h2 {
+  padding-top: 0;
+  margin-top: 0;
+}
+
 .user-form input {
   margin-bottom: 20px;
 }
@@ -213,7 +218,7 @@
 }
 
 .user-form__btn_save {
-  margin-top: 5px;
+  margin-top: 10px;
   width: 100%;
 	background: #646CFF;
   border-radius: 5px;
