--- a/src/components/main/form/UserForm.css
+++ b/src/components/main/form/UserForm.css
@@ -42,7 +42,8 @@
   transition: opacity .1s ease-in-out,transform .1s ease-in-out;
 }
 
-.user-form input[type="text"] {
+.user-form input[type="text"],
+.user-form input[type="email"] {
   padding-left: 10px;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -97,7 +98,8 @@
 
 .user-form__select { 
   display: block; 
-  margin: 0; 
+  margin: 0;
+  margin-bottom: 21px;
   padding: .6em 1.4em .5em .8em; 
   width: 100%; 
   max-width: 100%; 
@@ -118,7 +120,7 @@
   background-position: right .7em top 50%, 0 0;
   background-size: .65em auto, 100%; 
   cursor: pointer;
-} 
+}
 
 .user-form__select::-ms-expand {
   display: none; 
@@ -135,7 +137,7 @@
   box-shadow: 0 0 0 3px -moz-mac-focusring; 
   color: #222;
   outline: none; 
-} 
+}
 
 .user-form__select option { 
   font-weight:normal; 
@@ -144,20 +146,25 @@
 .user-form__select option:hover { 
   background: #213547;
   color: $fff;
-} 
+}
+
+.user-form__theme p {
+  margin-top: 0;
+}
 
 .user-form__theme input {
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
-.user-form__checkbox {
-  width: 18px;
-  height: 18px;
-  margin-right: 10px;
-  border-radius: 3px;
+.user-form__theme {
+  height: 92px;
+}
+
+.user-form__radio {
   cursor: pointer;
 }
+
 
 .user-form__light,
 .user-form__dark {
@@ -173,8 +180,8 @@
 
 .user-form__image {
   margin-top: 10px;
-/*  display: grid;*/
 }
+
 .user-form__image label {
   margin-bottom: 10px;
   margin-right: 20px;
@@ -182,7 +189,7 @@
 }
 
 .user-form__image input {
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 
 .user-form__file {
@@ -198,27 +205,36 @@
   cursor: pointer;
 }
 
-.user-form__radio {
+.user-form__checkbox {
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+  border-radius: 3px;
   cursor: pointer;
 }
 
 .user-form__agree {
   margin: 20px 0;
+}
+
+.user-form__agree_container {
   display: grid;
   grid-auto-flow: column;
-
 }
 
 .user-form__agree p {
-  margin: 0;
   width: 250px;
+}
+
+.user-form__agree_content {
+  margin: -20px 0 20px 0;
   background: #f5f5f5;
   font-size: 14px;
   line-height: 1.3;
 }
 
 .user-form__btn_save {
-  margin-top: 10px;
+  margin-top: -10px;
   width: 100%;
 	background: #646CFF;
   border-radius: 5px;
@@ -232,6 +248,14 @@
 
 .user-form__btn_save:focus {
   outline: none;
+}
+
+.user-form__error {
+  margin: -21px 0 0 0;
+  background: #fff;
+  color: #3b6dcb;
+  font-size: 14px;
+  text-align: center;
 }
 
 .user-form__success {
